[tool.poetry]
authors = ["author <author@domain.tld>"]
description = ""
name = "api"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
black = "^22.12.0"
fastapi = "^0.88.0"
python = "^3.10"
uvicorn = "^0.20.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
